# formation

./: .gitignore  AGENT_GATEWAY_IMPLEMENTATION_PLAN.md  CNAME  Cargo.toml  Dockerfile  Dockerfile.form-build-server  Dockerfile.form-test  Dockerfile.form-vmm  Dockerfile.minimal  ENVIRONMENT_VARIABLES.md  README.md  README_REFACTOR_PLAN.md  TEST_PLAN_FIXES.md  agent-deployment-plan.md  ai_marketplace_types.md  build-requirements.md  decentralized-turn-implementation-plan.md  decentralized-turn-planning.md  decentralized-turn-subtasks.md  docker-compose-README.md  docker-compose-test-plan.md  docker-compose.yml  economic_infra_implementation_next_steps.md  economic_infra_implementation_plan.md  economic_infra_integration_plan.md  entity-relationships-implementation-plan.md  implementation_plan.md  marketplace_registry_implementation.md  marketplace_roadmap.md  mcp_server_implementation_plan.md  microservices-migration-plan.md  nat-traversal-relay-integration.md  roadmap.md  scaling_state_machine_design.md  stateful_elastic_scaling_planning.md  vanity_domain_sequence_diagrams.md  virtual_anycast_implementation_plan.md
form-auth/: Cargo.toml  README.md
form-auth/src/: error.rs  extractor.rs  lib.rs  middleware.rs  signature.rs
form-broker/: Cargo.toml  Dockerfile  README.md
form-broker/config/: default.conf
form-broker/examples/: main.rs
form-broker/scripts/: entrypoint.sh
form-cli/: Cargo.toml
form-cli/src/: lib.rs  main.rs  wallet.rs
form-cli/src/dev/: create.rs  info.rs  mod.rs  start.rs  stop.rs
form-config/: Cargo.toml
form-config/src/: lib.rs  main.rs
form-dns/: Cargo.toml  Dockerfile  README.md
form-dns/config/: default.conf
form-dns/examples/: bootstrap_domain.rs  geo_dns_resolver.rs  geo_lookup.rs  health_based_dns.rs  manage_bootstrap_nodes.rs  proximity_selection.rs  run-mock-server.rs
form-dns/rustls_acme_cache/: cached_account_BOWPQEIpUvsFs1NnRwMx42UTa26JkiDuLwg9ReIVTU4  cached_cert_YlUt_OjAeAVOJzumt4OaQvEgCUHrVSub7hTwMb61-pY
form-dns/scripts/: api-create-record.sh
form-dns/src/: api.rs  authority.rs  geo_resolver.rs  geo_util.rs  geolocation.rs  health.rs  health_tracker.rs  lib.rs  main.rs  proxy.rs  store.rs
form-fuzzing/: .gitignore  Cargo.toml  README.md
form-fuzzing/src/: constants.rs  lib.rs  utils.rs
form-fuzzing/src/generators/: dns.rs  economic.rs  mcp.rs  mod.rs  network.rs  p2p.rs  pack.rs  routing.rs  state.rs  vm.rs  vm_management.rs
form-fuzzing/src/harness/: dns.rs  economic.rs  mcp.rs  mod.rs  network.rs  node_metrics.rs  p2p.rs  pack.rs  routing.rs  state.rs  vm_management.rs  vm_metrics.rs
form-fuzzing/src/instrumentation/: coverage.rs  fault_injection.rs  mod.rs  sanitizer.rs
form-fuzzing/src/mutators/: dns.rs  economic.rs  mcp.rs  mod.rs  network.rs  node_metrics.rs  p2p.rs  pack.rs  routing.rs  state.rs  vm.rs  vm_metrics.rs
form-fuzzing/src/reporters/: mod.rs
form-inference/: .gitignore  README.md  pyproject.toml
form-inference/infra/: README.md  containers_teardown.yml  docker-compose.yml.j2  machine_setup.yml  main.tf  run.sh  test_distributed.py
form-inference/runpod/: deepseek-r1  download
form-inference/src/: README.md  api.py  device.py  factory.py  form_mock.py  inventory.ini  main.py  model.py  service.py  test.py  worker.py
form-mcp/: Cargo.toml  README.md  openapi.yaml
form-mcp/client/: README.md  __init__.py  example.py  form_mcp_client.py
form-mcp/docs/: mcp_server_implementation_plan.md  pack_tools.md
form-mcp/examples/: pack_example.py
form-mcp/src/: lib.rs  main.rs
form-net/: Cargo.toml  Dockerfile
form-net/client/: Cargo.toml
form-net/formnet/: Cargo.toml
form-net/server/: Cargo.toml
form-node-metrics/: Cargo.toml
form-node-metrics/src/: capabilities.rs  capacity.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  util.rs
form-p2p/: Cargo.toml  Dockerfile  build.rs
form-p2p/examples/: get-if-addrs.rs  two-local-queues.rs
form-p2p/proto/: formation.proto
form-p2p/src/: api.rs  db.rs  heartbeat.rs  join.rs  lib.rs  main.rs  message.rs  queue.rs  server.rs
form-pack/: .env.example  Cargo.toml  Dockerfile
form-pack/scripts/: image-customizer-test.sh
form-pack/src/: capability_matcher.rs  formfile.rs  image_builder.rs  lib.rs  manager.rs  monitor.rs  pack.rs
form-rplb/: Cargo.toml
form-rplb/examples/: http_proxy.rs  tls_public_proxy.rs  tls_public_proxy_tokio_rustls_acme.rs  tls_vanity_proxy.rs
form-rplb/rustls_acme_cache/: cached_account_JO4weSOypmapJ0Fw6U37xNsiJC6_liG0k2T5UOkcSGU  cached_account_owSSBFPJ5oFSHQzmoXBfTS3pKfHJkERo5kpRGmLvWOs  cached_cert_nmeaRhBivP5fJg2pr-HNTU9ES75WkxaDsq4AiRTSYew
form-rplb/src/: backend.rs  certs.rs  config.rs  error.rs  keys.rs  lib.rs  protocol.rs  proxy.rs  resolver.rs
form-state/: '  .env.example  Cargo.toml  Dockerfile  MIGRATION.md  README.md  auth-billing-integration-plan.md  error-tracking.md  openapi.yaml
form-state/config/: default.conf
form-state/docs/: auth-billing-integration.md
form-state/examples/: auth-example.rs  ecdsa-auth-client.rs  ecdsa-auth-example.rs  ecdsa_auth_client_test.rs  ecdsa_auth_complete_test.rs  ecdsa_auth_server.rs  ecdsa_auth_test.rs  ecdsa_server_test.rs  mock-server.rs  request-full-state.rs  standalone-server-auth.rs  standalone-server.rs
form-state/scripts/: run_mock_server.sh  run_with_auth.sh
form-state/src/: accounts.rs  agent.rs  api.rs  datastore.rs  db.rs  instances.rs  lib.rs  main.rs  model.rs  network.rs  nodes.rs  scaling.rs  signature_auth.rs  tasks.rs  verification.rs
form-state/tests/: delegated_auth_and_build_flow.rs
form-traits/: Cargo.toml
form-traits/src/: event.rs  lib.rs  node.rs  topic.rs
form-types/: Cargo.toml
form-types/src/: event.rs  lib.rs  pubsub.rs  request.rs  response.rs  state.rs  topic.rs
form-usage-events/: API_DOCUMENTATION.md  Cargo.toml
form-usage-events/src/: circuit_breaker.rs  errors.rs  events.rs  lib.rs  publish.rs  retry.rs  threshold.rs
form-vm-metrics/: API_DOCUMENTATION.md  Cargo.toml
form-vm-metrics/src/: cpu.rs  disk.rs  events.rs  gpu.rs  lib.rs  load.rs  main.rs  mem.rs  network.rs  system.rs
(+539 files in other folders)
