
[workspace]
resolver = "2"
members = [
  "form-broker",
  "form-vmm/api_client",
  "form-vmm/arch",
  "form-vmm/block", "form-vmm/devices",
  "form-vmm/event_monitor",
  "form-vmm/hypervisor",
  "form-vmm/net_gen",
  "form-vmm/net_util",
  "form-vmm/option_parser",
  "form-vmm/pci",
  "form-vmm/performance-metrics",
  "form-vmm/rate_limiter",
  "form-vmm/serial_buffer",
  "form-vmm/test_infra",
  "form-vmm/tracer",
  "form-vmm/vhost_user_block",
  "form-vmm/vhost_user_net",
  "form-vmm/virtio-devices",
  "form-vmm/vm-allocator",
  "form-vmm/vm-device",
  "form-vmm/vm-migration",
  "form-vmm/vm-virtio",
  "form-vmm/vmm",
  "form-vmm/vmm-service",
  "form-net/server",
  "form-net/client",
  "form-net/formnet",
  "form-net/hostsfile",
  "form-net/shared",
  "form-net/publicip",
  "form-net/netlink-request",
  "form-types",
  "form-traits",
  "form-state",
  "form-p2p",
  "form-vmm/form-vmm", 
  "form-cli", 
  "form-pack"
, "form-config", "form-dns", "form-rplb"]

[workspace.dependencies]
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", branch = "main" }
kvm-bindings = "0.10.0"
kvm-ioctls = "0.19.0"
linux-loader = "0.13.0"
mshv-bindings = "0.3.1"
mshv-ioctls = "0.3.1"
seccompiler = "0.4.0"
vfio-bindings = { git = "https://github.com/rust-vmm/vfio", branch = "main" }
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio", branch = "main", default-features = false }
vfio_user = { git = "https://github.com/rust-vmm/vfio-user", branch = "main" }
vhost = { git = "https://github.com/rust-vmm/vhost", rev = "d983ae0" }
vhost-user-backend = { git = "https://github.com/rust-vmm/vhost", rev = "d983ae0" }
virtio-bindings = "0.2.4"
virtio-queue = "0.14.0"
vm-fdt = { git = "https://github.com/rust-vmm/vm-fdt", branch = "main" }
vm-memory = "0.16.0"
vmm-sys-util = "0.12.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.profiling]
debug = true
inherits = "release"
strip = false
