[package]
name = "form-auth"
version = "0.1.0"
edition = "2021"
description = "ECDSA signature-based authentication for Formation services"

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

# Cryptographic libraries for ECDSA
k256 = { version = "0.13", features = ["ecdsa", "sha256", "digest", "ecdsa-core", "pem"] }
sha2 = "0.10"
hex = "0.4"

# Web framework
axum = "0.7"
http = "1.0"
hyper = { version = "1.5", features = ["server"] }
tower = "0.5"

# Logging
log = "0.4"
tracing = "0.1"

chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "test-util"] }
rand = "0.8"
tokio-test = "0.4"
rand_core = "0.6"
hyper = { version = "0.14", features = ["full"] }
