[package]
name = "form-broker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "form-broker"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
bytes = "1.6.0"
async-trait = "0.1.80"
log = "0.4"
simple_logger = "4.3.0"

[[example]]
name = "main"
path = "examples/main.rs"
