[package]
name = "form-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "form"
path = "src/main.rs"

[features]
testnet = []
devnet = []
mainnet = []

[dependencies]
clap = { "version" = "4", features=["derive"] }
#TODO: Reduce dependencies to individual alloy crates
# once we know what we will and wont need
clap_complete = "4"
colored = "3"
dialoguer = { version = "0.10" }
alloy = { "version" = "0.9", features = ["full"]}
bip39 = { version = "2", features = ["rand"]}
bip32 = "0.3"
rand = "0.8"
alloy-signer-local = { version = "0.9", features = ["mnemonic"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.24"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.0"
ed25519-dalek-bip32 = "0.2"
aes-gcm = "0.10"
scrypt = "0.11"
uuid = { version = "1.4", features = ["v4"] }
hex = "0.4"
random_word = { version = "0.4", features = ["en"] }
form-types = { path = "../form-types" }
form-pack = { path = "../form-pack" }
shared = { path = "../form-net/shared" }
formnet = { path = "../form-net/formnet" }
form-config = { path = "../form-config" }
tokio-util = "0.7"
bytes = "1"
chrono = "0.4"
tiny_http = "0.12"
bs58 = "0.5"
slip10 = "0.4"
base58 = "0.2"
daemonize = "0.5"
argon2 = "0.5"
anyhow = "1"
