[package]
name = "form-config"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.1", features = ["signers", "signer-local", "signer-mnemonic", "signer-mnemonic-all-languages"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
colored = "3"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
scrypt = "0.11"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"]}
