[package]
name = "form-dns"
version = "0.1.0"
edition = "2021"

[lib]
name = "form_dns"
path = "src/lib.rs"

[[example]]
name = "run_mock_server"
path = "examples/run-mock-server.rs"

[[example]]
name = "bootstrap_domain"
path = "examples/bootstrap_domain.rs"

[[example]]
name = "manage_bootstrap_nodes"
path = "examples/manage_bootstrap_nodes.rs"

[dependencies]
trust-dns-server = { version = "0.23", features = ["dnssec"]}
trust-dns-proto = { version = "0.23", features = ["dnssec", "openssl", "ring", "serde-config"]}
trust-dns-client = "0.23"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
simple_logger = "5"
form-types = { path = "../form-types/" }
form-rplb = { path = "../form-rplb" }
maxminddb = "0.23.0"
thiserror = "1.0"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
env_logger = "0.11"
mockito = "1.2"
