[package]
name = "form-fuzzing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive fuzzing infrastructure for the Formation Network"
repository = "https://github.com/formation/formation"
license = "MIT OR Apache-2.0"

[dependencies]
# Fuzzing-specific dependencies
arbitrary = "1.3.0"
libfuzzer-sys = { version = "0.4.6", optional = true }
honggfuzz = { version = "0.5.55", optional = true }
afl = { version = "0.12.11", optional = true }
proptest = "1.2.0"
rand = "0.8.5"
fake = "2.6.1"
bolero = "0.10.0"  # Property-based testing framework with fuzzing support
humantime = "2.1.0"
tracing = "0.1.37"
tokio = { version = "1.29.1", features = ["full"] }

# Note: In a real implementation, we would include the Formation Network crates
# These are commented out for now since we're creating a standalone example
# form-types = { path = "../form-types" }
# form-traits = { path = "../form-traits" }
# form-state = { path = "../form-state" }
# form-p2p = { path = "../form-p2p" }
# form-vmm = { path = "../form-vmm/form-vmm" }
# form-cli = { path = "../form-cli" }
# form-net = { path = "../form-net/formnet" }
# form-dns = { path = "../form-dns" }
# form-rplb = { path = "../form-rplb" }
# form-mcp = { path = "../form-mcp" }

[features]
default = []
libfuzzer = ["libfuzzer-sys/link"]
afl = ["afl/link"]
honggfuzz = ["honggfuzz/link"]
timeout = []

[[bin]]
name = "fuzz_vm_management"
path = "src/bin/fuzz_vm_management.rs"

# Additional fuzzers will be added here as they are implemented

[lib]
name = "form_fuzzing"
path = "src/lib.rs"

# For fuzzing CLI tools
[profile.release]
debug = true

# For fuzzing optimization
[profile.dev]
opt-level = 1 