[package]
name = "form-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for the Formation network"
authors = ["Formation Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "form-mcp"
path = "src/main.rs"

[lib]
name = "form_mcp"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

# Cryptography and auth
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"]}
rand = "0.8"
hex = "0.4"
jwt = "0.16"
hmac = "0.12"
tiny-keccak = { version = "2.0", features = ["sha3"] }
sha3 = "0.10"
sha2 = "0.10"
futures-util = "0.3"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "time", "uuid"], optional = true }
redis = { version = "0.23", optional = true }

# Integration with Formation ecosystem
form-types = { path = "../form-types" }
form-config = { path = "../form-config" }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
num_cpus = "1.16"

[features]
default = ["postgres", "redis-cache"]
postgres = ["sqlx"]
redis-cache = ["redis"]

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.4"
