[package]
authors = ["Formation Core and Innernet Contributors"]
build = "build.rs"
description = "A mesh network system that uses WireGuard under the hood." 
edition = "2021"
name = "Formnet"
version = "0.1.0"
# Minimum buildable version:

[[bin]]
name = "formnet-server"
path = "server/src/main.rs"

[[bin]]
name = "formnet-client"
path = "client/src/main.rs"

[[bin]]
name = "formnet-service"
path = "formnet/src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
