[package]
name = "form-node-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
raw-cpuid = "10.6"
sysinfo = "0.33"
nvml-wrapper = "0.9"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
bincode = "1.3"
pnet = "0.35.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex = "0.4" 
log = "0.4"
form-p2p = { path = "../form-p2p" }

[features]
intel = ["sgx"]
amd = ["sev"]

[dependencies.sgx]
version = "0.6"
optional = true

[dependencies.sev]
version = "5"
optional = true

[dependencies.tss2]
version = "0.1"
