[package]
name = "form-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tonic = "0.11.0"
prost = "0.12.6"
tonic-reflection = "0.11.0"
conductor = { git = "https://github.com/versatus/conductor" }
form-types = { path = "../form-types" }
form-traits = { path = "../form-traits" }
form-state = { path = "../form-state" }
shared = { path = "../form-net/shared" }
chrono = "0.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["cbor", "messagepack", "bincode", "json"] }
alloy = { version = "0.1.3", features = [ "full", "signer-mnemonic", "signer-mnemonic-all-languages" ] }
getset = "0.1.2"
log = "0.4"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
hex = "0.4.3"
base64 = "0.22.1"
sha3 = "0.10.8"
url = "2"
crdts = { git = "https://github.com/cryptonomikhan/rust-crdt.git", rev="4088bd3" } 
bincode = "1"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7.9", features = ["multipart"] } 

[build-dependencies]
tonic-build = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
