[package]
name = "form-p2p"
version = "0.1.0"
edition = "2021"

[[example]]
name = "two_local_queues"
path = "examples/two-local-queues.rs"

[[example]]
name = "get_if_addrs"
path = "examples/get-if-addrs.rs"

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
form-types = { path = "../form-types" }
form-traits = { path = "../form-traits" }
shared = { path = "../form-net/shared" }
tokio = { version = "1", features = ["full"] }
alloy-primitives = { version = "0.8", features = ["k256"] } 
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"]}
log = "0.4"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
hex = "0.4.3"
base64 = "0.22"
sha3 = "0.10"
url = "2"
crdts = { git = "http://github.com/Cryptonomikhan/rust-crdt", rev = "1fe4992" }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7.9", features = ["multipart"] } 
rand = "0.8"
clap = { version = "4", features = ["derive"] }
form-config = { path = "../form-config" }
simple_logger = "5"
bytes = "1"
futures = "0.3"
async-stream = "0.3"


[dev-dependencies]
get_if_addrs = "0.5"
