[package]
name = "form-pack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "form-build-server"
path = "src/bin/build_server.rs"

[[bin]]
name = "form-pack-manager"
path = "src/bin/pack_manager.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tar = "0.4"
flate2 = "1"
tempfile = "3"
sha3 = "0.10"
rand = "0.8"
base64 = "0.22"
sha-crypt = "0.5"
lazy_static = "1"
futures = "0.3.31"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7.9" 
hyper = { version = "1.5", features = ["server"] }
tower = { version = "0.5", features = ["make"] } 
hyper-util = { version = "0.1", features = ["server"] }
hyperlocal = "0.9"
