[package]
name = "form-pack"
version = "0.1.0"
edition = "2021"

[features]
default = []
treehacks = []
devnet = []

[[bin]]
name = "form-build-server"
path = "src/bin/build_server.rs"

[[bin]]
name = "form-pack-manager"
path = "src/bin/pack_manager.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
bollard = "0.18"
tar = "0.4"
flate2 = "1"
tempfile = "3.2.0"
sha3 = "0.10"
rand = "0.8"
base64 = "0.22"
sha-crypt = "0.5"
lazy_static = "1"
futures = "0.3.31"
uuid = { version = "1.3.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7.9", features = ["multipart"] } 
hyper = { version = "1.5", features = ["server"] }
tower = { version = "0.5", features = ["make"] } 
hyper-util = { version = "0.1", features = ["server"] }
hyperlocal = "0.9"
random_word = { version = "0.4.3", features = ["en"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
form-types = { path = "../form-types" }
form-p2p = { path = "../form-p2p/" }
form-state = { path = "../form-state" }
crdts = { git = "http://github.com/Cryptonomikhan/rust-crdt", rev = "af3a3dd" }
hex = "0.4" 
alloy-primitives = { version = "0.8", features = ["k256"] } 
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"]}
get_if_addrs = "0.5"
form-config = { path = "../form-config" }
log = "0.4"
simple_logger = "4.3"
regex = "1.10.2"
actix-web = "4"
serde_yaml = "0.9"
async-trait = "0.1"
jwt = "0.16"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.28"
tower-http = { version = "0.4.0", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
url = "2.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envconfig = "0.10.0"
thiserror = "1.0.57"

[lib]
path = "src/lib.rs"

[[bin]]
name = "form-pack"
path = "src/bin/main.rs"
