[package]
name = "form-state"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"]}
tokio = { version = "1", features = ["full"] } 
serde = { version = "1", features = ["derive"] }
shared = { path = "../form-net/shared/" }
serde_json = "1"
crdts = { git = "https://github.com/cryptonomikhan/rust-crdt.git", rev = "6d0a2f3" }
ipnet = { version = "2.4", features = ["serde"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"]}
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
k256 = "0.13.4"
hex = "0.4"
log = "0.4"
simple_logger = "5"
alloy-primitives = { version = "0.8", features = ["k256"] } 
rand = "0.8"
form-config = { path = "../form-config" }
trust-dns-proto = { version = "0.23", features = ["dnssec", "openssl", "ring", "serde-config"]}
form-dns = { path = "../form-dns" }
