[package]
name = "form-state"
version = "0.1.0"
edition = "2021"

[[example]]
name = "request_full_state"
path = "examples/request-full-state.rs"

[dependencies]
clap = { version = "4", features = ["derive"]}
tokio = { version = "1", features = ["full"] } 
serde = { version = "1", features = ["derive"] }
shared = { path = "../form-net/shared/" }
serde_json = "1"
crdts = { git = "http://github.com/Cryptonomikhan/rust-crdt", rev = "af3a3dd" }
ipnet = { version = "2.4", features = ["serde"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"]}
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
k256 = "0.13.4"
hex = "0.4"
log = "0.4"
simple_logger = "5"
alloy-primitives = { version = "0.8", features = ["k256"] } 
rand = "0.8"
form-config = { path = "../form-config" }
trust-dns-proto = { version = "0.23", features = ["dnssec", "openssl", "ring", "serde-config"]}
form-dns = { path = "../form-dns" }
form-p2p = { path = "../form-p2p" }
form-types = { path = "../form-types" }
form-node-metrics = { path = "../form-node-metrics" }
form-vm-metrics = { path = "../form-vm-metrics" }
futures = "0.3"
url = "2"
rocksdb = "0.21"
bincode = "1"
lazy_static = "1.5.0"
