[package]
name = "form-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor = { git = "https://github.com/versatus/conductor" }
alloy = { version = "0.1.3", features = [ "full", "signer-mnemonic", "signer-mnemonic-all-languages" ] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["cbor", "messagepack", "bincode", "json"] }
async-trait = "0.1.80"
