[package]
name = "form-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
alloy = { version = "0.1.3", features = [ "full", "signer-mnemonic", "signer-mnemonic-all-languages" ] }
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
derive_more = "0.99.18"
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
log = "0.4"
clap = { "version" = "4.5", features=["derive"] }
form-traits = { path = "../form-traits" }
form-broker = { path = "../form-broker" }
