[package]
name = "form-types"
version = "0.1.0"
edition = "2021"

[features]
devnet = []
testnet = []
mainnet = []

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
alloy-core = { version = "0.8.19", features = ["rand", "serde", "k256"]}
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
derive_more = "0.99.18"
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
log = "0.4"
clap = { "version" = "4.5", features=["derive"] }
form-traits = { path = "../form-traits" }
form-broker = { path = "../form-broker" }
form-pack = { path = "../form-pack" }
shared = { path = "../form-net/shared" }
