[package]
name = "form-usage-events"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
hex = "0.4"
rand = "0.8"
futures = "0.3"
form-p2p = { path = "../form-p2p" }
