[package]
name = "form-vm-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33"
nvml-wrapper = "0.9"
procfs = { git = "http://github.com/cryptonomikhan/procfs", rev = "9b414a4", features = ["serde1"] } 
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
axum = { version = "0.7", features = ["tokio"] }
