[package]
name = "form-vm-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33"
nvml-wrapper = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["tokio"] }
form-usage-events = { path = "../form-usage-events" }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { git = "http://github.com/cryptonomikhan/procfs", rev = "9b414a4", features = ["serde1"] }
